tests/baselines/reference/classExtendsClauseClassMergedWithModuleNotReferingConstructor.errors.txt
classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts(10,21): error TS2507: Type 'number' is not a constructor function type.


==== classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts (3 errors) ====
    class A {
        a: number;
    }
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var v: string;
    }
    
    module Foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var A = 1;
        class B extends A {
                        ~
!!! error TS2507: Type 'number' is not a constructor function type.
            b: string;
        }
    }